# score_lerobot_episodes

./: .gitignore  CONTRIBUTING.md  README.md  corrupt.py  data.py  evaluation.py  hfd.sh  main.py  pyproject.toml  requirements.txt  run_corrupt_parallel.sh  run_multiple.sh  score.sh  score_all.sh  score_all_corrupt.sh  score_dataset.py  train.py  ui.py  vlm.py
scores/: __init__.py  path.py  visual.py
scripts/: score_openx.sh  visualize_quantile.py
src/score_lerobot_episodes/: __init__.py  corrupt.py  data.py  evaluation.py  util.py  vlm.py
src/score_lerobot_episodes/scores/: __init__.py  path.py  visual.py
