[project]
name = "score-lerobot-episodes"
version = "0.1.0"
description = "Utilities for scoring LeRobot episodes"
requires-python = ">=3.8"
dependencies = [
    "lerobot",
    "opencv-python",
    "numpy",
    "pandas",
    "google-generativeai",
    "pydantic",
    "streamlit",
    "plotly",
    "python-dotenv",  # Note: 'dotenv' package is actually called 'python-dotenv'
    "uniplot",
    "pyarrow",  # This is used in data.py but missing from requirements.txt
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"